--- a/index.html
+++ b/index.html
@@ -10,30 +10,38 @@
 
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-2xl space-y-8">
-        <h1 class="text-2xl font-bold mb-6 text-center">Closest Value Calculator</h1>
+        <h1 class="text-2xl font-bold mb-6 text-center">Round winner calculator</h1>
 
         <!-- First Calculator -->
         <div id="calculator-1" class="space-y-4">
             <form class="space-y-4">
                 <div class="flex space-x-2">
                     <div>
-                        <label for="input1-1" class="block text-sm font-medium text-gray-700">Input 1</label>
+                        <label for="input1-1" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label1-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(1, 1)">
+                        </label>
                         <input type="number" step="any" id="input1-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input2-1" class="block text-sm font-medium text-gray-700">Input 2</label>
+                        <label for="input2-1" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label2-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(2, 1)">
+                        </label>
                         <input type="number" step="any" id="input2-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input3-1" class="block text-sm font-medium text-gray-700">Input 3</label>
+                        <label for="input3-1" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label3-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(3, 1)">
+                        </label>
                         <input type="number" step="any" id="input3-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input4-1" class="block text-sm font-medium text-gray-700">Input 4</label>
+                        <label for="input4-1" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label4-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(4, 1)">
+                        </label>
                         <input type="number" step="any" id="input4-1" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                 </div>
-                <button type="button" onclick="calculateClosest(1, 10.0)" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">Calculate Closest</button>
+                <button type="button" id="calculate-winner-1" onclick="calculateClosest(1, 10.0)" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 disabled:opacity-50 disabled:cursor-not-allowed" disabled>Calculate winner</button>
             </form>
             <div id="result-1" class="mt-6 text-center text-lg font-medium"></div>
         </div>
@@ -45,23 +53,31 @@
             <form class="space-y-4">
                 <div class="flex space-x-2">
                     <div>
-                        <label for="input1-2" class="block text-sm font-medium text-gray-700">Input 1</label>
+                        <label for="input1-2" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label1-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(1, 2)">
+                        </label>
                         <input type="number" step="any" id="input1-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input2-2" class="block text-sm font-medium text-gray-700">Input 2</label>
+                        <label for="input2-2" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label2-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(2, 2)">
+                        </label>
                         <input type="number" step="any" id="input2-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input3-2" class="block text-sm font-medium text-gray-700">Input 3</label>
+                        <label for="input3-2" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label3-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(3, 2)">
+                        </label>
                         <input type="number" step="any" id="input3-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input4-2" class="block text-sm font-medium text-gray-700">Input 4</label>
+                        <label for="input4-2" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label4-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(4, 2)">
+                        </label>
                         <input type="number" step="any" id="input4-2" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                 </div>
-                <button type="button" onclick="calculateClosest(2, 20.0)" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">Calculate Closest</button>
+                <button type="button" id="calculate-winner-2" onclick="calculateClosest(2, 20.0)" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 disabled:opacity-50 disabled:cursor-not-allowed" disabled>Calculate winner</button>
             </form>
             <div id="result-2" class="mt-6 text-center text-lg font-medium"></div>
         </div>
@@ -73,46 +89,122 @@
             <form class="space-y-4">
                 <div class="flex space-x-2">
                     <div>
-                        <label for="input1-3" class="block text-sm font-medium text-gray-700">Input 1</label>
+                        <label for="input1-3" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label1-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(1, 3)">
+                        </label>
                         <input type="number" step="any" id="input1-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input2-3" class="block text-sm font-medium text-gray-700">Input 2</label>
+                        <label for="input2-3" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label2-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(2, 3)">
+                        </label>
                         <input type="number" step="any" id="input2-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input3-3" class="block text-sm font-medium text-gray-700">Input 3</label>
+                        <label for="input3-3" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label3-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(3, 3)">
+                        </label>
                         <input type="number" step="any" id="input3-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                     <div>
-                        <label for="input4-3" class="block text-sm font-medium text-gray-700">Input 4</label>
+                        <label for="input4-3" class="block text-sm font-medium text-gray-700">
+                            <input type="text" id="label4-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" value="Value from" onblur="updateLabel(4, 3)">
+                        </label>
                         <input type="number" step="any" id="input4-3" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                     </div>
                 </div>
-                <button type="button" onclick="calculateClosest(3, 30.0)" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">Calculate Closest</button>
+                <button type="button" id="calculate-winner-3" onclick="calculateClosest(3, 30.0)" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50 disabled:opacity-50 disabled:cursor-not-allowed" disabled>Calculate winner</button>
             </form>
             <div id="result-3" class="mt-6 text-center text-lg font-medium"></div>
+        </div>
+
+        <hr class="border-gray-300">
+        <hr class="border-gray-300">
+
+        <!-- Third Calculator -->
+        <div id="calculator-final" class="space-y-2">
+            <form class="space-y-2">
+                <div class="flex space-x-2">
+                    <div>
+                        <label for="value-final" class="block text-sm font-medium text-gray-700">Value</label>
+                        <input type="number" step="any" id="value-final" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+                    </div>
+                    <div>
+                        <label for="margin-final" class="block text-sm font-medium text-gray-700">Margin</label>
+                        <input type="number" step="any" id="margin-final" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+                    </div>
+                </div>
+                <button type="button" onclick="calculateIfWinnerOrNot(8)" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">Will you win?</button>
+            </form>
+            <div id="result-final" class="mt-6 text-center text-lg font-medium"></div>
         </div>
     </div>
 
     <script>
-        function calculateClosest(calculatorNumber, predefinedNumber) {
+        function enableButton(calculatorNumber) {
             const inputs = [
-                parseFloat(document.getElementById(`input1-${calculatorNumber}`).value),
-                parseFloat(document.getElementById(`input2-${calculatorNumber}`).value),
-                parseFloat(document.getElementById(`input3-${calculatorNumber}`).value),
-                parseFloat(document.getElementById(`input4-${calculatorNumber}`).value)
+                document.getElementById(`input1-${calculatorNumber}`).value,
+                document.getElementById(`input2-${calculatorNumber}`).value,
+                document.getElementById(`input3-${calculatorNumber}`).value,
+                document.getElementById(`input4-${calculatorNumber}`).value
             ];
-            
-            const filteredInputs = inputs.filter(value => value <= predefinedNumber);
-            const allAbove = filteredInputs.length === 0;
 
-            if (allAbove) {
-                document.getElementById(`result-${calculatorNumber}`).textContent = "All values are above, new round";
+            const allFilled = inputs.every(value => value !== '');
+            document.getElementById(`calculate-winner-${calculatorNumber}`).disabled = !allFilled;
+        }
+
+        document.querySelectorAll('input[type="number"]').forEach(input => {
+            input.addEventListener('input', (event) => {
+                const calculatorNumber = event.target.id.split('-')[1];
+                enableButton(calculatorNumber);
+            });
+        });
+
+        function calculateClosest(calculatorNumber, predefinedNumber) {
+        const inputs = [
+            parseFloat(document.getElementById(`input1-${calculatorNumber}`).value),
+            parseFloat(document.getElementById(`input2-${calculatorNumber}`).value),
+            parseFloat(document.getElementById(`input3-${calculatorNumber}`).value),
+            parseFloat(document.getElementById(`input4-${calculatorNumber}`).value)
+        ];
+
+        const labels = [
+            document.getElementById(`label1-${calculatorNumber}`).textContent,
+            document.getElementById(`label2-${calculatorNumber}`).textContent,
+            document.getElementById(`label3-${calculatorNumber}`).textContent,
+            document.getElementById(`label4-${calculatorNumber}`).textContent
+        ];
+
+        const filteredInputs = inputs.filter(value => value <= predefinedNumber);
+        const allAbove = filteredInputs.length === 0;
+
+        if (allAbove) {
+            document.getElementById(`result-${calculatorNumber}`).textContent = "All values are above the real price, new round is needed";
+        } else {
+            const closestIndex = filteredInputs.reduce((prevIndex, currValue, currIndex) => 
+                Math.abs(currValue - predefinedNumber) < Math.abs(inputs[prevIndex] - predefinedNumber) ? currIndex : prevIndex, 0);
+            const closest = filteredInputs[closestIndex];
+            const closestLabel = labels[inputs.indexOf(closest)];
+            document.getElementById(`result-${calculatorNumber}`).textContent = `Closest value to real price ${predefinedNumber} is ${closest}. The winner is ${closestLabel}!`;
+        }
+    }
+
+        function calculateIfWinnerOrNot(predefinedNumber) {
+            const valueFinal = parseFloat(document.getElementById(`value-final`).value);
+            const marginFinal = parseFloat(document.getElementById(`margin-final`).value);
+            const difference = predefinedNumber + marginFinal - valueFinal;
+
+            if (valueFinal <= predefinedNumber + marginFinal) {
+                document.getElementById('result-final').textContent = `Player wins! Difference: ${difference}`;
             } else {
-                const closest = filteredInputs.reduce((prev, curr) => Math.abs(curr - predefinedNumber) < Math.abs(prev - predefinedNumber) ? curr : prev);
-                document.getElementById(`result-${calculatorNumber}`).textContent = `Closest value to ${predefinedNumber} is ${closest}`;
+                document.getElementById('result-final').textContent = `Player loses! Difference: ${difference}`;
             }
+        }
+
+        function updateLabel(inputNumber, calculatorNumber) {
+            const labelInput = document.getElementById(`label${inputNumber}-${calculatorNumber}`);
+            const labelText = labelInput.value;
+            labelInput.outerHTML = `<span id="label${inputNumber}-${calculatorNumber}" class="block text-sm font-medium text-gray-700">${labelText}</span>`;
         }
     </script>
 </body>
